project: Force manager and break handler update